--- a/po/cs.po
+++ b/po/cs.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the AURWEB package.
+# This file is distributed under the same license as the MPRWEB package.
 # 
 # Translators:
 # Daniel Milde <daniel@milde.cz>, 2017
@@ -203,7 +203,7 @@ msgstr "Hledat balíčky, které spolu-spravuji"
 #: html/home.php
 #, php-format
 msgid ""
-"Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU "
+"Welcome to the MPR! Please read the %sMPR User Guidelines%s and %sMPR TU "
 "Guidelines%s for more information."
 msgstr ""
 
@@ -228,9 +228,9 @@ msgstr ""
 
 #: html/home.php template/footer.php
 msgid ""
-"AUR packages are user produced content. Any use of the provided files is at "
+"MPR packages are user produced content. Any use of the provided files is at "
 "your own risk."
-msgstr "Obsah balíčků AUR je vytvořen uživateli. Jakékoli použití poskytnutých souborů je na vlastní nebezpečí."
+msgstr "Obsah balíčků MPR je vytvořen uživateli. Jakékoli použití poskytnutých souborů je na vlastní nebezpečí."
 
 #: html/home.php
 msgid "Learn more..."
@@ -267,7 +267,7 @@ msgstr "Žádost o smazání"
 
 #: html/home.php
 msgid ""
-"Request a package to be removed from the Arch User Repository. Please do not"
+"Request a package to be removed from the makedeb Package Repository. Please do not"
 " use this if a package is broken and can be fixed easily. Instead, contact "
 "the package maintainer and file orphan request if necessary."
 msgstr ""
@@ -296,14 +296,14 @@ msgstr "Odeslání balíčků"
 #: html/home.php
 #, php-format
 msgid ""
-"Git over SSH is now used to submit packages to the AUR. See the %sSubmitting"
-" packages%s section of the Arch User Repository ArchWiki page for more "
+"Git over SSH is now used to submit packages to the MPR. See the %sSubmitting"
+" packages%s section of the makedeb Package Repository ArchWiki page for more "
 "details."
 msgstr ""
 
 #: html/home.php
-msgid "The following SSH fingerprints are used for the AUR:"
-msgstr "Pro AUR se používají následující otisky SSH"
+msgid "The following SSH fingerprints are used for the MPR:"
+msgstr "Pro MPR se používají následující otisky SSH"
 
 #: html/home.php
 msgid "Discussion"
@@ -312,9 +312,9 @@ msgstr "Diskuze"
 #: html/home.php
 #, php-format
 msgid ""
-"General discussion regarding the Arch User Repository (AUR) and Trusted User"
+"General discussion regarding the makedeb Package Repository (MPR) and Trusted User"
 " structure takes place on %saur-general%s. For discussion relating to the "
-"development of the AUR web interface, use the %saur-dev%s mailing list."
+"development of the MPR web interface, use the %saur-dev%s mailing list."
 msgstr ""
 
 #: html/home.php
@@ -324,8 +324,8 @@ msgstr "Hlášení chyb"
 #: html/home.php
 #, php-format
 msgid ""
-"If you find a bug in the AUR web interface, please fill out a bug report on "
-"our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface"
+"If you find a bug in the MPR web interface, please fill out a bug report on "
+"our %sbug tracker%s. Use the tracker to report bugs in the MPR web interface"
 " %sonly%s. To report packaging bugs contact the package maintainer or leave "
 "a comment on the appropriate package page."
 msgstr ""
@@ -502,7 +502,7 @@ msgstr "Smazat balíček"
 #, php-format
 msgid ""
 "Use this form to delete the package base %s%s%s and the following packages "
-"from the AUR: "
+"from the MPR: "
 msgstr ""
 
 #: html/pkgdel.php
@@ -1137,8 +1137,8 @@ msgstr "Žádost byla úspěšně uzavřena."
 
 #: template/account_delete.php
 #, php-format
-msgid "You can use this form to permanently delete the AUR account %s."
-msgstr "Tento formulář můžete použít k trvalému odstranění účtu AUR %s."
+msgid "You can use this form to permanently delete the MPR account %s."
+msgstr "Tento formulář můžete použít k trvalému odstranění účtu MPR %s."
 
 #: template/account_delete.php
 #, php-format
@@ -1298,7 +1298,7 @@ msgstr "Skrýt email"
 
 #: template/account_edit_form.php
 msgid ""
-"If you do not hide your email address, it is visible to all registered AUR "
+"If you do not hide your email address, it is visible to all registered MPR "
 "users. If you hide your email address, it is visible to members of the Arch "
 "Linux staff only."
 msgstr ""
@@ -1347,8 +1347,8 @@ msgstr "Heslo znovu"
 #: template/account_edit_form.php
 msgid ""
 "The following information is only required if you want to submit packages to"
-" the Arch User Repository."
-msgstr "Následující informace jsou požadovány pouze v případě, že chcete odeslat balíčky do Arch User Repository."
+" the makedeb Package Repository."
+msgstr "Následující informace jsou požadovány pouze v případě, že chcete odeslat balíčky do makedeb Package Repository."
 
 #: template/account_edit_form.php
 msgid "SSH Public Key"
@@ -1380,7 +1380,7 @@ msgstr ""
 
 #: template/account_edit_form.php
 msgid ""
-"To protect the AUR against automated account creation, we kindly ask you to "
+"To protect the MPR against automated account creation, we kindly ask you to "
 "provide the output of the following command:"
 msgstr ""
 
@@ -1601,7 +1601,7 @@ msgstr "Přidat komentář"
 
 #: template/pkg_comment_form.php
 msgid ""
-"Git commit identifiers referencing commits in the AUR package repository and"
+"Git commit identifiers referencing commits in the MPR package repository and"
 " URLs are converted to links automatically."
 msgstr ""
 
@@ -2128,7 +2128,7 @@ msgid "Back"
 msgstr "Zpět"
 
 #: scripts/notify.py
-msgid "AUR Password Reset"
+msgid "MPR Password Reset"
 msgstr ""
 
 #: scripts/notify.py
@@ -2140,19 +2140,19 @@ msgid ""
 msgstr ""
 
 #: scripts/notify.py
-msgid "Welcome to the Arch User Repository"
+msgid "Welcome to the makedeb Package Repository"
 msgstr ""
 
 #: scripts/notify.py
 msgid ""
-"Welcome to the Arch User Repository! In order to set an initial password for"
+"Welcome to the makedeb Package Repository! In order to set an initial password for"
 " your new account, please click the link [1] below. If the link does not "
 "work, try copying and pasting it into your browser."
 msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Comment for {pkgbase}"
+msgid "MPR Comment for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2169,7 +2169,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package Update: {pkgbase}"
+msgid "MPR Package Update: {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2179,7 +2179,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Out-of-date Notification for {pkgbase}"
+msgid "MPR Out-of-date Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2189,7 +2189,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Ownership Notification for {pkgbase}"
+msgid "MPR Ownership Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2204,7 +2204,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Co-Maintainer Notification for {pkgbase}"
+msgid "MPR Co-Maintainer Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2219,7 +2219,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package deleted: {pkgbase}"
+msgid "MPR Package deleted: {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
