--- a/po/es.po
+++ b/po/es.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the AURWEB package.
+# This file is distributed under the same license as the MPRWEB package.
 # 
 # Translators:
 # Adolfo Jayme-Barrientos, 2015
@@ -209,9 +209,9 @@ msgstr "Buscar paquetes que soy coencargado"
 #: html/home.php
 #, php-format
 msgid ""
-"Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU "
+"Welcome to the MPR! Please read the %sMPR User Guidelines%s and %sMPR TU "
 "Guidelines%s for more information."
-msgstr "¡Bienvenido al repositorio de usuarios de Arch! Léase las %sDirectrices del usuario del AUR%s y las %sDirectrices del usuario de confianza del AUR%s para mayor información."
+msgstr "¡Bienvenido al repositorio de usuarios de Arch! Léase las %sDirectrices del usuario del MPR%s y las %sDirectrices del usuario de confianza del MPR%s para mayor información."
 
 #: html/home.php
 #, php-format
@@ -234,9 +234,9 @@ msgstr "ACLARATORIA"
 
 #: html/home.php template/footer.php
 msgid ""
-"AUR packages are user produced content. Any use of the provided files is at "
+"MPR packages are user produced content. Any use of the provided files is at "
 "your own risk."
-msgstr "Los paquetes del AUR son producidos por los usuarios. Cualquier uso de los archivos de estos es a tu propio riesgo."
+msgstr "Los paquetes del MPR son producidos por los usuarios. Cualquier uso de los archivos de estos es a tu propio riesgo."
 
 #: html/home.php
 msgid "Learn more..."
@@ -273,7 +273,7 @@ msgstr "Solicitud de eliminación"
 
 #: html/home.php
 msgid ""
-"Request a package to be removed from the Arch User Repository. Please do not"
+"Request a package to be removed from the makedeb Package Repository. Please do not"
 " use this if a package is broken and can be fixed easily. Instead, contact "
 "the package maintainer and file orphan request if necessary."
 msgstr "Solicitar la eliminación de un paquete del repositorio de usuarios de Arch. No utilices esta opción si un paquete está roto pero puede ser arreglado fácilmente. En cambio, contacta al encargado del paquete y presenta una solicitud de orfandad si es necesario."
@@ -302,14 +302,14 @@ msgstr "Subir paquetes"
 #: html/home.php
 #, php-format
 msgid ""
-"Git over SSH is now used to submit packages to the AUR. See the %sSubmitting"
-" packages%s section of the Arch User Repository ArchWiki page for more "
+"Git over SSH is now used to submit packages to the MPR. See the %sSubmitting"
+" packages%s section of the makedeb Package Repository ArchWiki page for more "
 "details."
-msgstr "Ahora se utiliza Git sobre SSH para subir paquetes al AUR. Véase la sección %sSubir paquetes%s de la wiki del repositorio de usuarios de Arch para más detalles."
+msgstr "Ahora se utiliza Git sobre SSH para subir paquetes al MPR. Véase la sección %sSubir paquetes%s de la wiki del repositorio de usuarios de Arch para más detalles."
 
 #: html/home.php
-msgid "The following SSH fingerprints are used for the AUR:"
-msgstr "Las siguientes huellas SSH están en uso para el AUR."
+msgid "The following SSH fingerprints are used for the MPR:"
+msgstr "Las siguientes huellas SSH están en uso para el MPR."
 
 #: html/home.php
 msgid "Discussion"
@@ -318,10 +318,10 @@ msgstr "Debate"
 #: html/home.php
 #, php-format
 msgid ""
-"General discussion regarding the Arch User Repository (AUR) and Trusted User"
+"General discussion regarding the makedeb Package Repository (MPR) and Trusted User"
 " structure takes place on %saur-general%s. For discussion relating to the "
-"development of the AUR web interface, use the %saur-dev%s mailing list."
-msgstr "La discusión general sobre el repositorio de usuarios de Arch (AUR) y la estructura de usuarios de confianza se realiza en la lista de correos %saur-general%s. Para la discusión en relación con el desarrollo de la interfaz web del AUR, utiliza la lista de correo %saur-dev%s."
+"development of the MPR web interface, use the %saur-dev%s mailing list."
+msgstr "La discusión general sobre el repositorio de usuarios de Arch (MPR) y la estructura de usuarios de confianza se realiza en la lista de correos %saur-general%s. Para la discusión en relación con el desarrollo de la interfaz web del MPR, utiliza la lista de correo %saur-dev%s."
 
 #: html/home.php
 msgid "Bug Reporting"
@@ -330,11 +330,11 @@ msgstr "Informe de errores"
 #: html/home.php
 #, php-format
 msgid ""
-"If you find a bug in the AUR web interface, please fill out a bug report on "
-"our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface"
+"If you find a bug in the MPR web interface, please fill out a bug report on "
+"our %sbug tracker%s. Use the tracker to report bugs in the MPR web interface"
 " %sonly%s. To report packaging bugs contact the package maintainer or leave "
 "a comment on the appropriate package page."
-msgstr "Si encuentras un error en la interfaz web del AUR, llena un informe de error en nuestro %srastreador de errores o «bug tracker»%s. Usa este para reportar %súnicamente%s errores de la interfaz web del AUR. Para reportar errores de empaquetado debes contactar al encargado o dejar un comentario en la página respectiva del paquete."
+msgstr "Si encuentras un error en la interfaz web del MPR, llena un informe de error en nuestro %srastreador de errores o «bug tracker»%s. Usa este para reportar %súnicamente%s errores de la interfaz web del MPR. Para reportar errores de empaquetado debes contactar al encargado o dejar un comentario en la página respectiva del paquete."
 
 #: html/home.php
 msgid "Package Search"
@@ -508,8 +508,8 @@ msgstr "Eliminar paquete"
 #, php-format
 msgid ""
 "Use this form to delete the package base %s%s%s and the following packages "
-"from the AUR: "
-msgstr "Usa este formulario para eliminar el paquete base %s%s%s y los siguientes paquetes en el AUR:"
+"from the MPR: "
+msgstr "Usa este formulario para eliminar el paquete base %s%s%s y los siguientes paquetes en el MPR:"
 
 #: html/pkgdel.php
 msgid "Deletion of a package is permanent. "
@@ -585,7 +585,7 @@ msgstr "Marcado como obsoleto"
 msgid ""
 "Use this form to flag the package base %s%s%s and the following packages "
 "out-of-date: "
-msgstr "Usa este formulario para marcar el paquete base %s%s%s y los siguientes paquetes en el AUR como obsoletos:"
+msgstr "Usa este formulario para marcar el paquete base %s%s%s y los siguientes paquetes en el MPR como obsoletos:"
 
 #: html/pkgflag.php
 #, php-format
@@ -1143,8 +1143,8 @@ msgstr "Solicitud cerrada exitosamente"
 
 #: template/account_delete.php
 #, php-format
-msgid "You can use this form to permanently delete the AUR account %s."
-msgstr "Puedes usar este formulario para eliminar la cuenta de %s en AUR permanentemente."
+msgid "You can use this form to permanently delete the MPR account %s."
+msgstr "Puedes usar este formulario para eliminar la cuenta de %s en MPR permanentemente."
 
 #: template/account_delete.php
 #, php-format
@@ -1304,7 +1304,7 @@ msgstr "Ocultar dirreción de correo"
 
 #: template/account_edit_form.php
 msgid ""
-"If you do not hide your email address, it is visible to all registered AUR "
+"If you do not hide your email address, it is visible to all registered MPR "
 "users. If you hide your email address, it is visible to members of the Arch "
 "Linux staff only."
 msgstr ""
@@ -1353,7 +1353,7 @@ msgstr "Reescribe la contraseña"
 #: template/account_edit_form.php
 msgid ""
 "The following information is only required if you want to submit packages to"
-" the Arch User Repository."
+" the makedeb Package Repository."
 msgstr "La siguiente información únicamente es necesaria si deseas subir paquetes al repositorio de usuarios de Arch."
 
 #: template/account_edit_form.php
@@ -1386,7 +1386,7 @@ msgstr ""
 
 #: template/account_edit_form.php
 msgid ""
-"To protect the AUR against automated account creation, we kindly ask you to "
+"To protect the MPR against automated account creation, we kindly ask you to "
 "provide the output of the following command:"
 msgstr ""
 
@@ -1471,7 +1471,7 @@ msgstr "Regresar a detalles"
 #: template/footer.php
 #, php-format
 msgid "Copyright %s 2004-%d aurweb Development Team."
-msgstr "Derechos de autor %s 2004 - %d, equipo desarrollador de la web del AUR."
+msgstr "Derechos de autor %s 2004 - %d, equipo desarrollador de la web del MPR."
 
 #: template/header.php
 msgid " My Account"
@@ -1605,7 +1605,7 @@ msgstr "Añadir un comentario"
 
 #: template/pkg_comment_form.php
 msgid ""
-"Git commit identifiers referencing commits in the AUR package repository and"
+"Git commit identifiers referencing commits in the MPR package repository and"
 " URLs are converted to links automatically."
 msgstr ""
 
@@ -2124,8 +2124,8 @@ msgid "Back"
 msgstr "Atrás"
 
 #: scripts/notify.py
-msgid "AUR Password Reset"
-msgstr "Reiniciarlizar contraseña del AUR"
+msgid "MPR Password Reset"
+msgstr "Reiniciarlizar contraseña del MPR"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2136,20 +2136,20 @@ msgid ""
 msgstr ""
 
 #: scripts/notify.py
-msgid "Welcome to the Arch User Repository"
+msgid "Welcome to the makedeb Package Repository"
 msgstr "Bienvenido al repositorio de usuarios de Arch"
 
 #: scripts/notify.py
 msgid ""
-"Welcome to the Arch User Repository! In order to set an initial password for"
+"Welcome to the makedeb Package Repository! In order to set an initial password for"
 " your new account, please click the link [1] below. If the link does not "
 "work, try copying and pasting it into your browser."
 msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Comment for {pkgbase}"
-msgstr "Comentario en el AUR para {pkgbase}"
+msgid "MPR Comment for {pkgbase}"
+msgstr "Comentario en el MPR para {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2165,7 +2165,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package Update: {pkgbase}"
+msgid "MPR Package Update: {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2175,7 +2175,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Out-of-date Notification for {pkgbase}"
+msgid "MPR Out-of-date Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2185,7 +2185,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Ownership Notification for {pkgbase}"
+msgid "MPR Ownership Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2200,7 +2200,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Co-Maintainer Notification for {pkgbase}"
+msgid "MPR Co-Maintainer Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2215,7 +2215,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package deleted: {pkgbase}"
+msgid "MPR Package deleted: {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
