--- a/po/he.po
+++ b/po/he.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the AURWEB package.
+# This file is distributed under the same license as the MPRWEB package.
 # 
 # Translators:
 # GenghisKhan <genghiskhan@gmx.ca>, 2016
@@ -200,9 +200,9 @@ msgstr "חיפוש אחר חבילה שאני מתחזק המשנה שלה"
 #: html/home.php
 #, php-format
 msgid ""
-"Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU "
+"Welcome to the MPR! Please read the %sMPR User Guidelines%s and %sMPR TU "
 "Guidelines%s for more information."
-msgstr "ברוך בואך ל־AUR, מאגר תרומות המשתמשים של ארץ׳! נא לקרוא את %sהכללים למשתמש ב־AUR%s ואת %sהכללים למשתמשים מהימנים ב־AUR%s."
+msgstr "ברוך בואך ל־MPR, מאגר תרומות המשתמשים של ארץ׳! נא לקרוא את %sהכללים למשתמש ב־MPR%s ואת %sהכללים למשתמשים מהימנים ב־MPR%s."
 
 #: html/home.php
 #, php-format
@@ -225,9 +225,9 @@ msgstr "הבהרה"
 
 #: html/home.php template/footer.php
 msgid ""
-"AUR packages are user produced content. Any use of the provided files is at "
+"MPR packages are user produced content. Any use of the provided files is at "
 "your own risk."
-msgstr "חבילות AUR הן תוכן שנוצר על ידי המשתמשים. כל שימוש בקבצים שסופקו הוא על אחריותך בלבד."
+msgstr "חבילות MPR הן תוכן שנוצר על ידי המשתמשים. כל שימוש בקבצים שסופקו הוא על אחריותך בלבד."
 
 #: html/home.php
 msgid "Learn more..."
@@ -264,7 +264,7 @@ msgstr "בקשת מחיקה"
 
 #: html/home.php
 msgid ""
-"Request a package to be removed from the Arch User Repository. Please do not"
+"Request a package to be removed from the makedeb Package Repository. Please do not"
 " use this if a package is broken and can be fixed easily. Instead, contact "
 "the package maintainer and file orphan request if necessary."
 msgstr "ניתן לבקש הסרת חבילה ממאגר המשתמשים של ארץ׳. אין להשתמש בזה אם יש תקלה בחבילה וניתן לתקן אותה בקלות. במקום זאת, יש ליצור קשר עם מתחזק החבילה ולהגיש בקשת יתומה אם יש צורך."
@@ -293,14 +293,14 @@ msgstr "שליחת חבילות"
 #: html/home.php
 #, php-format
 msgid ""
-"Git over SSH is now used to submit packages to the AUR. See the %sSubmitting"
-" packages%s section of the Arch User Repository ArchWiki page for more "
+"Git over SSH is now used to submit packages to the MPR. See the %sSubmitting"
+" packages%s section of the makedeb Package Repository ArchWiki page for more "
 "details."
-msgstr "Git על גבי SSH היא התשתית העדכנית להגשת חבילות ל־AUR. ניתן לעיין בסעיף %sהגשת חבילות%s בעמוד Arch User Repository ב־ArchWiki לקבלת פרטים נוספים."
+msgstr "Git על גבי SSH היא התשתית העדכנית להגשת חבילות ל־MPR. ניתן לעיין בסעיף %sהגשת חבילות%s בעמוד makedeb Package Repository ב־ArchWiki לקבלת פרטים נוספים."
 
 #: html/home.php
-msgid "The following SSH fingerprints are used for the AUR:"
-msgstr "טביעות האצבע מסוג SSH הבאות נמצאות בשימוש עבור AUR:"
+msgid "The following SSH fingerprints are used for the MPR:"
+msgstr "טביעות האצבע מסוג SSH הבאות נמצאות בשימוש עבור MPR:"
 
 #: html/home.php
 msgid "Discussion"
@@ -309,10 +309,10 @@ msgstr "דיון"
 #: html/home.php
 #, php-format
 msgid ""
-"General discussion regarding the Arch User Repository (AUR) and Trusted User"
+"General discussion regarding the makedeb Package Repository (MPR) and Trusted User"
 " structure takes place on %saur-general%s. For discussion relating to the "
-"development of the AUR web interface, use the %saur-dev%s mailing list."
-msgstr "הדיון הכללי על מאגר המשתמשים של ארץ׳ (AUR) ומבנה המשתמשים המהימנים מתנהל ברשימה %saur-general%s. לדיון בנוגע לפיתוח של המנשק של AUR, יש להשתמש ברשימה %saur-dev%s."
+"development of the MPR web interface, use the %saur-dev%s mailing list."
+msgstr "הדיון הכללי על מאגר המשתמשים של ארץ׳ (MPR) ומבנה המשתמשים המהימנים מתנהל ברשימה %saur-general%s. לדיון בנוגע לפיתוח של המנשק של MPR, יש להשתמש ברשימה %saur-dev%s."
 
 #: html/home.php
 msgid "Bug Reporting"
@@ -321,11 +321,11 @@ msgstr "דיווח על באגים"
 #: html/home.php
 #, php-format
 msgid ""
-"If you find a bug in the AUR web interface, please fill out a bug report on "
-"our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface"
+"If you find a bug in the MPR web interface, please fill out a bug report on "
+"our %sbug tracker%s. Use the tracker to report bugs in the MPR web interface"
 " %sonly%s. To report packaging bugs contact the package maintainer or leave "
 "a comment on the appropriate package page."
-msgstr "אם נתקלת בתקלה במנשק הדפדפן של AUR, נא להגיש דיווח על תקלה ב%sמערכת ניהול התקלות%s שלנו. יש להשתמש במערכת ניהול התקלות כדי לדווח על תקלות במנשק הדפדפן %sבלבד%s. כדי לדווח על תקלות עם אריזה יש ליצור קשר עם מתחזק החבילה או להשאיר הערה בעמוד החבילה בהתאם."
+msgstr "אם נתקלת בתקלה במנשק הדפדפן של MPR, נא להגיש דיווח על תקלה ב%sמערכת ניהול התקלות%s שלנו. יש להשתמש במערכת ניהול התקלות כדי לדווח על תקלות במנשק הדפדפן %sבלבד%s. כדי לדווח על תקלות עם אריזה יש ליצור קשר עם מתחזק החבילה או להשאיר הערה בעמוד החבילה בהתאם."
 
 #: html/home.php
 msgid "Package Search"
@@ -499,8 +499,8 @@ msgstr "מחיקת חבילה"
 #, php-format
 msgid ""
 "Use this form to delete the package base %s%s%s and the following packages "
-"from the AUR: "
-msgstr "ניתן להשתמש בטופס זה כדי למחוק את בסיס החבילה %s%s%s ואת החבילות הבאות מ־AUR:"
+"from the MPR: "
+msgstr "ניתן להשתמש בטופס זה כדי למחוק את בסיס החבילה %s%s%s ואת החבילות הבאות מ־MPR:"
 
 #: html/pkgdel.php
 msgid "Deletion of a package is permanent. "
@@ -1134,8 +1134,8 @@ msgstr "הבקשה נסגרה בהצלחה."
 
 #: template/account_delete.php
 #, php-format
-msgid "You can use this form to permanently delete the AUR account %s."
-msgstr "ניתן להשתמש בטופס זה כדי למחוק את חשבון ה־AUR בשם %s לצמיתות."
+msgid "You can use this form to permanently delete the MPR account %s."
+msgstr "ניתן להשתמש בטופס זה כדי למחוק את חשבון ה־MPR בשם %s לצמיתות."
 
 #: template/account_delete.php
 #, php-format
@@ -1295,10 +1295,10 @@ msgstr "הסתרת כתובת דוא״ל"
 
 #: template/account_edit_form.php
 msgid ""
-"If you do not hide your email address, it is visible to all registered AUR "
+"If you do not hide your email address, it is visible to all registered MPR "
 "users. If you hide your email address, it is visible to members of the Arch "
 "Linux staff only."
-msgstr "אם בחירתך תהיה שלא להסתיר את כתובת הדוא״ל שלך, היא תהיה גלויה לכלל המשתמשים ב־AUR. בחירה הפוכה תגרום לכך שהכתובת תהיה גלויה בפני חברי הסגל של Arch לינוקס בלבד."
+msgstr "אם בחירתך תהיה שלא להסתיר את כתובת הדוא״ל שלך, היא תהיה גלויה לכלל המשתמשים ב־MPR. בחירה הפוכה תגרום לכך שהכתובת תהיה גלויה בפני חברי הסגל של Arch לינוקס בלבד."
 
 #: template/account_edit_form.php
 msgid "Backup Email Address"
@@ -1344,7 +1344,7 @@ msgstr "הקלדת הססמה מחדש"
 #: template/account_edit_form.php
 msgid ""
 "The following information is only required if you want to submit packages to"
-" the Arch User Repository."
+" the makedeb Package Repository."
 msgstr "המידע הבא נחוץ רק אם ברצונך להגיש חבילות למאגר החבילות של ארץ׳."
 
 #: template/account_edit_form.php
@@ -1377,9 +1377,9 @@ msgstr "הססמה הנוכחית שלך"
 
 #: template/account_edit_form.php
 msgid ""
-"To protect the AUR against automated account creation, we kindly ask you to "
+"To protect the MPR against automated account creation, we kindly ask you to "
 "provide the output of the following command:"
-msgstr "כדי להגן על AUR מפני יצירה אוטומטית של חשבונות, אנו מבקשים ממך לציין מה הפלט של הפקודה הבאה:"
+msgstr "כדי להגן על MPR מפני יצירה אוטומטית של חשבונות, אנו מבקשים ממך לציין מה הפלט של הפקודה הבאה:"
 
 #: template/account_edit_form.php
 msgid "Answer"
@@ -1598,9 +1598,9 @@ msgstr "הוספת תגובה"
 
 #: template/pkg_comment_form.php
 msgid ""
-"Git commit identifiers referencing commits in the AUR package repository and"
+"Git commit identifiers referencing commits in the MPR package repository and"
 " URLs are converted to links automatically."
-msgstr "מזהי הגשות של Git שמפנים להגשות במאגר החבילות של AUR וכתובות מומרים אוטומטית לקישורים."
+msgstr "מזהי הגשות של Git שמפנים להגשות במאגר החבילות של MPR וכתובות מומרים אוטומטית לקישורים."
 
 #: template/pkg_comment_form.php
 #, php-format
@@ -2125,8 +2125,8 @@ msgid "Back"
 msgstr "חזרה"
 
 #: scripts/notify.py
-msgid "AUR Password Reset"
-msgstr "איפוס ססמה ב־AUR"
+msgid "MPR Password Reset"
+msgstr "איפוס ססמה ב־MPR"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2137,20 +2137,20 @@ msgid ""
 msgstr "הוגשה בקשה לאיפוס ססמה לחשבון {user} שמקושר לכתובת הדוא״ל שלך. אם ברצונך לאפס את הססמה שלך עליך להיכנס לקישור [1] שלהלן, אם לא ביקשת מוטב להתעלם מההודעה הזאת ולא יתבצע אף שינוי."
 
 #: scripts/notify.py
-msgid "Welcome to the Arch User Repository"
+msgid "Welcome to the makedeb Package Repository"
 msgstr "ברוך בואך למאגר בתחזוקת המשתמשים של Arch"
 
 #: scripts/notify.py
 msgid ""
-"Welcome to the Arch User Repository! In order to set an initial password for"
+"Welcome to the makedeb Package Repository! In order to set an initial password for"
 " your new account, please click the link [1] below. If the link does not "
 "work, try copying and pasting it into your browser."
 msgstr "ברוך הבא למאגר חבילות המשתמשים של Arch! כדי להגדיר ססמה ראשונית לחשבון החדש שלך נא ללחוץ על הקישור [1] שלהלן. אם הקישור לא עובד, נא לנסות להעתיק ולהדביק אותו בדפדפן."
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Comment for {pkgbase}"
-msgstr "הערה ב־AUR על {pkgbase}"
+msgid "MPR Comment for {pkgbase}"
+msgstr "הערה ב־MPR על {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2166,8 +2166,8 @@ msgstr "אם לא מעניין אותך לקבל יותר הודעות על הח
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package Update: {pkgbase}"
-msgstr "עדכון בחבילת AUR:‏ {pkgbase}"
+msgid "MPR Package Update: {pkgbase}"
+msgstr "עדכון בחבילת MPR:‏ {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2176,8 +2176,8 @@ msgstr "נדחפה הגשה חדשה מאת {user} [1] אל {pkgbase} [2]."
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Out-of-date Notification for {pkgbase}"
-msgstr "התראת חבילה לא עדכנית ב־AUR עבור {pkgbase}"
+msgid "MPR Out-of-date Notification for {pkgbase}"
+msgstr "התראת חבילה לא עדכנית ב־MPR עבור {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2186,8 +2186,8 @@ msgstr "החבילה שלך {pkgbase} [1] סומנה כלא עדכנית על י
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Ownership Notification for {pkgbase}"
-msgstr "הודעת בעלות ב־AUR על {pkgbase}"
+msgid "MPR Ownership Notification for {pkgbase}"
+msgstr "הודעת בעלות ב־MPR על {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2201,8 +2201,8 @@ msgstr "החבילה {pkgbase} [1] נושלה על ידי {user} [2]."
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Co-Maintainer Notification for {pkgbase}"
-msgstr "התראה למתחזקי משנה ב־AUR של {pkgbase}"
+msgid "MPR Co-Maintainer Notification for {pkgbase}"
+msgstr "התראה למתחזקי משנה ב־MPR של {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2216,8 +2216,8 @@ msgstr "הוסרת מרשימת מתחזקי המשנה עבור {pkgbase} [1]."
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package deleted: {pkgbase}"
-msgstr "חבילה נמחקה ב־AUR‏: {pkgbase}"
+msgid "MPR Package deleted: {pkgbase}"
+msgstr "חבילה נמחקה ב־MPR‏: {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
