--- a/po/pl.po
+++ b/po/pl.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the AURWEB package.
+# This file is distributed under the same license as the MPRWEB package.
 # 
 # Translators:
 # Bartłomiej Piotrowski <spam@bpiotrowski.pl>, 2011
@@ -209,9 +209,9 @@ msgstr "Wyszukaj pakiety, które współ-utrzymuję"
 #: html/home.php
 #, php-format
 msgid ""
-"Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU "
+"Welcome to the MPR! Please read the %sMPR User Guidelines%s and %sMPR TU "
 "Guidelines%s for more information."
-msgstr "Witamy w AUR! Aby uzyskać więcej informacji, przeczytaj %sInstrukcję Użytkownika AUR%s oraz %sInstrukcję Zaufanego Użytkownika%s."
+msgstr "Witamy w MPR! Aby uzyskać więcej informacji, przeczytaj %sInstrukcję Użytkownika MPR%s oraz %sInstrukcję Zaufanego Użytkownika%s."
 
 #: html/home.php
 #, php-format
@@ -234,9 +234,9 @@ msgstr "ZRZECZENIE"
 
 #: html/home.php template/footer.php
 msgid ""
-"AUR packages are user produced content. Any use of the provided files is at "
+"MPR packages are user produced content. Any use of the provided files is at "
 "your own risk."
-msgstr "Pakiety w AUR są tworzone przez użytkowników. Używasz ich na własne ryzyko."
+msgstr "Pakiety w MPR są tworzone przez użytkowników. Używasz ich na własne ryzyko."
 
 #: html/home.php
 msgid "Learn more..."
@@ -273,7 +273,7 @@ msgstr "Prośba o usunięcie"
 
 #: html/home.php
 msgid ""
-"Request a package to be removed from the Arch User Repository. Please do not"
+"Request a package to be removed from the makedeb Package Repository. Please do not"
 " use this if a package is broken and can be fixed easily. Instead, contact "
 "the package maintainer and file orphan request if necessary."
 msgstr ""
@@ -302,14 +302,14 @@ msgstr "Przesyłanie pakietów"
 #: html/home.php
 #, php-format
 msgid ""
-"Git over SSH is now used to submit packages to the AUR. See the %sSubmitting"
-" packages%s section of the Arch User Repository ArchWiki page for more "
+"Git over SSH is now used to submit packages to the MPR. See the %sSubmitting"
+" packages%s section of the makedeb Package Repository ArchWiki page for more "
 "details."
 msgstr ""
 
 #: html/home.php
-msgid "The following SSH fingerprints are used for the AUR:"
-msgstr "Następujące odciski SSH są używane przez AUR:"
+msgid "The following SSH fingerprints are used for the MPR:"
+msgstr "Następujące odciski SSH są używane przez MPR:"
 
 #: html/home.php
 msgid "Discussion"
@@ -318,10 +318,10 @@ msgstr "Dyskusja"
 #: html/home.php
 #, php-format
 msgid ""
-"General discussion regarding the Arch User Repository (AUR) and Trusted User"
+"General discussion regarding the makedeb Package Repository (MPR) and Trusted User"
 " structure takes place on %saur-general%s. For discussion relating to the "
-"development of the AUR web interface, use the %saur-dev%s mailing list."
-msgstr "Ogólna dyskusja dotycząca Repozytorium Użytkowników Arch (AUR) i struktury Zaufanych Użytkowników odbywa się na %saur-general%s. Dyskusja dotycząca rozwoju interfejsu webowego AUR odbywa się zaś na liście dyskusyjnej %saur-dev%s."
+"development of the MPR web interface, use the %saur-dev%s mailing list."
+msgstr "Ogólna dyskusja dotycząca Repozytorium Użytkowników Arch (MPR) i struktury Zaufanych Użytkowników odbywa się na %saur-general%s. Dyskusja dotycząca rozwoju interfejsu webowego MPR odbywa się zaś na liście dyskusyjnej %saur-dev%s."
 
 #: html/home.php
 msgid "Bug Reporting"
@@ -330,11 +330,11 @@ msgstr "Zgłaszanie błędów"
 #: html/home.php
 #, php-format
 msgid ""
-"If you find a bug in the AUR web interface, please fill out a bug report on "
-"our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface"
+"If you find a bug in the MPR web interface, please fill out a bug report on "
+"our %sbug tracker%s. Use the tracker to report bugs in the MPR web interface"
 " %sonly%s. To report packaging bugs contact the package maintainer or leave "
 "a comment on the appropriate package page."
-msgstr "Jeśli znalazłeś błąd w interfejsie webowym AUR, zgłoś go w naszym %ssystemie śledzenia błędów%s. Używaj go %swyłącznie%s do zgłaszania błędów związanych z interfejsem webowym AUR. Błędy powiązane z pakietami zgłaszaj ich opiekunom lub zostaw komentarz pod odpowiednim pakietem."
+msgstr "Jeśli znalazłeś błąd w interfejsie webowym MPR, zgłoś go w naszym %ssystemie śledzenia błędów%s. Używaj go %swyłącznie%s do zgłaszania błędów związanych z interfejsem webowym MPR. Błędy powiązane z pakietami zgłaszaj ich opiekunom lub zostaw komentarz pod odpowiednim pakietem."
 
 #: html/home.php
 msgid "Package Search"
@@ -508,8 +508,8 @@ msgstr "Usuń pakiet"
 #, php-format
 msgid ""
 "Use this form to delete the package base %s%s%s and the following packages "
-"from the AUR: "
-msgstr "Użyj tego formularza, aby usunąć bazę pakietu %s%s%s i następujące pakiety z AUR:"
+"from the MPR: "
+msgstr "Użyj tego formularza, aby usunąć bazę pakietu %s%s%s i następujące pakiety z MPR:"
 
 #: html/pkgdel.php
 msgid "Deletion of a package is permanent. "
@@ -1143,7 +1143,7 @@ msgstr "Pomyślnie zamknięto prośbę."
 
 #: template/account_delete.php
 #, php-format
-msgid "You can use this form to permanently delete the AUR account %s."
+msgid "You can use this form to permanently delete the MPR account %s."
 msgstr "Możesz użyć tego formularza, aby nieodwracalnie usunąć konto %s."
 
 #: template/account_delete.php
@@ -1304,7 +1304,7 @@ msgstr "Ukryj adres e-mail"
 
 #: template/account_edit_form.php
 msgid ""
-"If you do not hide your email address, it is visible to all registered AUR "
+"If you do not hide your email address, it is visible to all registered MPR "
 "users. If you hide your email address, it is visible to members of the Arch "
 "Linux staff only."
 msgstr ""
@@ -1353,7 +1353,7 @@ msgstr "Hasło (ponownie)"
 #: template/account_edit_form.php
 msgid ""
 "The following information is only required if you want to submit packages to"
-" the Arch User Repository."
+" the makedeb Package Repository."
 msgstr "Następująca informacja jest wymagana jedynie w sytuacji, gdy chcesz przesłać pakiety do Repozytorium Użytkowników Arch."
 
 #: template/account_edit_form.php
@@ -1386,7 +1386,7 @@ msgstr ""
 
 #: template/account_edit_form.php
 msgid ""
-"To protect the AUR against automated account creation, we kindly ask you to "
+"To protect the MPR against automated account creation, we kindly ask you to "
 "provide the output of the following command:"
 msgstr ""
 
@@ -1607,7 +1607,7 @@ msgstr "Dodaj komentarz"
 
 #: template/pkg_comment_form.php
 msgid ""
-"Git commit identifiers referencing commits in the AUR package repository and"
+"Git commit identifiers referencing commits in the MPR package repository and"
 " URLs are converted to links automatically."
 msgstr ""
 
@@ -2134,8 +2134,8 @@ msgid "Back"
 msgstr "Wstecz"
 
 #: scripts/notify.py
-msgid "AUR Password Reset"
-msgstr "Reset hasła AUR"
+msgid "MPR Password Reset"
+msgstr "Reset hasła MPR"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2146,20 +2146,20 @@ msgid ""
 msgstr ""
 
 #: scripts/notify.py
-msgid "Welcome to the Arch User Repository"
-msgstr "Witamy w AUR: Repozytorium Użytkowników Arch"
+msgid "Welcome to the makedeb Package Repository"
+msgstr "Witamy w MPR: Repozytorium Użytkowników Arch"
 
 #: scripts/notify.py
 msgid ""
-"Welcome to the Arch User Repository! In order to set an initial password for"
+"Welcome to the makedeb Package Repository! In order to set an initial password for"
 " your new account, please click the link [1] below. If the link does not "
 "work, try copying and pasting it into your browser."
 msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Comment for {pkgbase}"
-msgstr "Komentarze AUR do {pkgbase}"
+msgid "MPR Comment for {pkgbase}"
+msgstr "Komentarze MPR do {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2175,8 +2175,8 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package Update: {pkgbase}"
-msgstr "Aktualizacja pakietu AUR: {pkgbase}"
+msgid "MPR Package Update: {pkgbase}"
+msgstr "Aktualizacja pakietu MPR: {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2185,8 +2185,8 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Out-of-date Notification for {pkgbase}"
-msgstr "Powiadomienie AUR o nieaktualnym pakiecie {pkgbase}"
+msgid "MPR Out-of-date Notification for {pkgbase}"
+msgstr "Powiadomienie MPR o nieaktualnym pakiecie {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2195,7 +2195,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Ownership Notification for {pkgbase}"
+msgid "MPR Ownership Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2210,7 +2210,7 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Co-Maintainer Notification for {pkgbase}"
+msgid "MPR Co-Maintainer Notification for {pkgbase}"
 msgstr ""
 
 #: scripts/notify.py
@@ -2225,8 +2225,8 @@ msgstr ""
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package deleted: {pkgbase}"
-msgstr "Usunięty pakiet AUR: {pkgbase}"
+msgid "MPR Package deleted: {pkgbase}"
+msgstr "Usunięty pakiet MPR: {pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
