--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the AURWEB package.
+# This file is distributed under the same license as the MPRWEB package.
 # 
 # Translators:
 # leonfeng <chaofeng111@qq.com>, 2015-2016
@@ -205,9 +205,9 @@ msgstr "搜索共同维护的软件包"
 #: html/home.php
 #, php-format
 msgid ""
-"Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU "
+"Welcome to the MPR! Please read the %sMPR User Guidelines%s and %sMPR TU "
 "Guidelines%s for more information."
-msgstr "欢迎来到 AUR！想了解更多信息，请阅读 %sAUR 用户指南%s和 %sAUR 受信用户指南%s。"
+msgstr "欢迎来到 MPR！想了解更多信息，请阅读 %sMPR 用户指南%s和 %sMPR 受信用户指南%s。"
 
 #: html/home.php
 #, php-format
@@ -230,9 +230,9 @@ msgstr "免责声明"
 
 #: html/home.php template/footer.php
 msgid ""
-"AUR packages are user produced content. Any use of the provided files is at "
+"MPR packages are user produced content. Any use of the provided files is at "
 "your own risk."
-msgstr "AUR 包为用户产生的内容。使用它们造成的后果自负。"
+msgstr "MPR 包为用户产生的内容。使用它们造成的后果自负。"
 
 #: html/home.php
 msgid "Learn more..."
@@ -269,10 +269,10 @@ msgstr "删除请求"
 
 #: html/home.php
 msgid ""
-"Request a package to be removed from the Arch User Repository. Please do not"
+"Request a package to be removed from the makedeb Package Repository. Please do not"
 " use this if a package is broken and can be fixed easily. Instead, contact "
 "the package maintainer and file orphan request if necessary."
-msgstr "请求软件包从 AUR 中移除。如果这个包虽然损坏了但是可以被轻易地修好，请不要进行此操作，您应该联系包的维护者或者有必要的情况下发送弃置请求。"
+msgstr "请求软件包从 MPR 中移除。如果这个包虽然损坏了但是可以被轻易地修好，请不要进行此操作，您应该联系包的维护者或者有必要的情况下发送弃置请求。"
 
 #: html/home.php
 msgid "Merge Request"
@@ -298,14 +298,14 @@ msgstr "提交软件包"
 #: html/home.php
 #, php-format
 msgid ""
-"Git over SSH is now used to submit packages to the AUR. See the %sSubmitting"
-" packages%s section of the Arch User Repository ArchWiki page for more "
+"Git over SSH is now used to submit packages to the MPR. See the %sSubmitting"
+" packages%s section of the makedeb Package Repository ArchWiki page for more "
 "details."
-msgstr "现在请使用 Git over SSH 来向 AUR 提交软件包。如果想知道更多，请查看 Arch Wiki 上的 Arch User Repository (简体中文) 页面中 %s提交软件包%s 章节。"
+msgstr "现在请使用 Git over SSH 来向 MPR 提交软件包。如果想知道更多，请查看 Arch Wiki 上的 makedeb Package Repository (简体中文) 页面中 %s提交软件包%s 章节。"
 
 #: html/home.php
-msgid "The following SSH fingerprints are used for the AUR:"
-msgstr "AUR 使用以下 SSH 指纹："
+msgid "The following SSH fingerprints are used for the MPR:"
+msgstr "MPR 使用以下 SSH 指纹："
 
 #: html/home.php
 msgid "Discussion"
@@ -314,10 +314,10 @@ msgstr "邮件列表"
 #: html/home.php
 #, php-format
 msgid ""
-"General discussion regarding the Arch User Repository (AUR) and Trusted User"
+"General discussion regarding the makedeb Package Repository (MPR) and Trusted User"
 " structure takes place on %saur-general%s. For discussion relating to the "
-"development of the AUR web interface, use the %saur-dev%s mailing list."
-msgstr "与 Arch 用户仓库（AUR）或者受信用户结构相关的一般讨论在 %saur-general%s 邮件列表。若是与 AUR web 页面开发相关的讨论，请使用 %saur-dev%s 邮件列表。"
+"development of the MPR web interface, use the %saur-dev%s mailing list."
+msgstr "与 Arch 用户仓库（MPR）或者受信用户结构相关的一般讨论在 %saur-general%s 邮件列表。若是与 MPR web 页面开发相关的讨论，请使用 %saur-dev%s 邮件列表。"
 
 #: html/home.php
 msgid "Bug Reporting"
@@ -326,11 +326,11 @@ msgstr "Bug 报告"
 #: html/home.php
 #, php-format
 msgid ""
-"If you find a bug in the AUR web interface, please fill out a bug report on "
-"our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface"
+"If you find a bug in the MPR web interface, please fill out a bug report on "
+"our %sbug tracker%s. Use the tracker to report bugs in the MPR web interface"
 " %sonly%s. To report packaging bugs contact the package maintainer or leave "
 "a comment on the appropriate package page."
-msgstr "如果你在 AUR web 页面中发现了一个 Bug，请提交到我们的 %sBug 追踪系统%s。请%s仅仅%s使用追踪系统报告 AUR 自身的 Bug。如果想要报告打包方面的 Bug，请联系相应的包维护者，或者在相应的软件包页面中留下一条评论。"
+msgstr "如果你在 MPR web 页面中发现了一个 Bug，请提交到我们的 %sBug 追踪系统%s。请%s仅仅%s使用追踪系统报告 MPR 自身的 Bug。如果想要报告打包方面的 Bug，请联系相应的包维护者，或者在相应的软件包页面中留下一条评论。"
 
 #: html/home.php
 msgid "Package Search"
@@ -504,8 +504,8 @@ msgstr "删除软件包"
 #, php-format
 msgid ""
 "Use this form to delete the package base %s%s%s and the following packages "
-"from the AUR: "
-msgstr "使用这个表单将包基础 %s%s%s 和以下包从 AUR 中移除："
+"from the MPR: "
+msgstr "使用这个表单将包基础 %s%s%s 和以下包从 MPR 中移除："
 
 #: html/pkgdel.php
 msgid "Deletion of a package is permanent. "
@@ -1139,8 +1139,8 @@ msgstr "请求关闭成功。"
 
 #: template/account_delete.php
 #, php-format
-msgid "You can use this form to permanently delete the AUR account %s."
-msgstr "你可以使用这个表单来彻底删除 AUR 帐号 %s。"
+msgid "You can use this form to permanently delete the MPR account %s."
+msgstr "你可以使用这个表单来彻底删除 MPR 帐号 %s。"
 
 #: template/account_delete.php
 #, php-format
@@ -1300,7 +1300,7 @@ msgstr "隐藏 E-mail"
 
 #: template/account_edit_form.php
 msgid ""
-"If you do not hide your email address, it is visible to all registered AUR "
+"If you do not hide your email address, it is visible to all registered MPR "
 "users. If you hide your email address, it is visible to members of the Arch "
 "Linux staff only."
 msgstr ""
@@ -1349,8 +1349,8 @@ msgstr "确认密码"
 #: template/account_edit_form.php
 msgid ""
 "The following information is only required if you want to submit packages to"
-" the Arch User Repository."
-msgstr "仅仅当你想要向 AUR 提交软件包时才需要填写以下信息。"
+" the makedeb Package Repository."
+msgstr "仅仅当你想要向 MPR 提交软件包时才需要填写以下信息。"
 
 #: template/account_edit_form.php
 msgid "SSH Public Key"
@@ -1382,7 +1382,7 @@ msgstr ""
 
 #: template/account_edit_form.php
 msgid ""
-"To protect the AUR against automated account creation, we kindly ask you to "
+"To protect the MPR against automated account creation, we kindly ask you to "
 "provide the output of the following command:"
 msgstr ""
 
@@ -1600,7 +1600,7 @@ msgstr "添加评论"
 
 #: template/pkg_comment_form.php
 msgid ""
-"Git commit identifiers referencing commits in the AUR package repository and"
+"Git commit identifiers referencing commits in the MPR package repository and"
 " URLs are converted to links automatically."
 msgstr ""
 
@@ -2115,8 +2115,8 @@ msgid "Back"
 msgstr "返回"
 
 #: scripts/notify.py
-msgid "AUR Password Reset"
-msgstr "重置 AUR 密码"
+msgid "MPR Password Reset"
+msgstr "重置 MPR 密码"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2127,20 +2127,20 @@ msgid ""
 msgstr "关联此邮件地址的用户 {user} 的重置密码请求已经提交。如果您想要重置密码，请点击以下链接 [1]，否则忽略此消息。"
 
 #: scripts/notify.py
-msgid "Welcome to the Arch User Repository"
+msgid "Welcome to the makedeb Package Repository"
 msgstr "欢迎来到 Arch 用户软件仓库"
 
 #: scripts/notify.py
 msgid ""
-"Welcome to the Arch User Repository! In order to set an initial password for"
+"Welcome to the makedeb Package Repository! In order to set an initial password for"
 " your new account, please click the link [1] below. If the link does not "
 "work, try copying and pasting it into your browser."
 msgstr "欢迎来到 Arch 用户软件仓库！想要为你的新账户设置初始密码，请点击下面的链接 [1]。如果链接不工作，请尝试复制它到你的浏览器中打开。"
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Comment for {pkgbase}"
-msgstr "AUR 软件包评论：{pkgbase}"
+msgid "MPR Comment for {pkgbase}"
+msgstr "MPR 软件包评论：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2156,8 +2156,8 @@ msgstr "若您不愿再收到关于此软件包的通知，请到此软件包页
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package Update: {pkgbase}"
-msgstr "AUR 软件包更新：{pkgbase}"
+msgid "MPR Package Update: {pkgbase}"
+msgstr "MPR 软件包更新：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2166,8 +2166,8 @@ msgstr "用户 {user} [1] 在软件包 {pkgbase} [2] 上传了新的提交："
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Out-of-date Notification for {pkgbase}"
-msgstr "AUR 软件包过期通知：{pkgbase}"
+msgid "MPR Out-of-date Notification for {pkgbase}"
+msgstr "MPR 软件包过期通知：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2176,8 +2176,8 @@ msgstr "您的软件包 {pkgbase} [1] 已被用户 {user} [2] 标记为过期：
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Ownership Notification for {pkgbase}"
-msgstr "AUR 软件包所有权通知：{pkgbase}"
+msgid "MPR Ownership Notification for {pkgbase}"
+msgstr "MPR 软件包所有权通知：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2191,8 +2191,8 @@ msgstr "软件包 {pkgbase} [1] 已被用户 {user} [2] 弃置。"
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Co-Maintainer Notification for {pkgbase}"
-msgstr "AUR 软件包共同维护者通知：{pkgbase}"
+msgid "MPR Co-Maintainer Notification for {pkgbase}"
+msgstr "MPR 软件包共同维护者通知：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
@@ -2206,8 +2206,8 @@ msgstr "您已被移出软件包 {pkgbase} [1] 的共同维护者列表。"
 
 #: scripts/notify.py
 #, python-brace-format
-msgid "AUR Package deleted: {pkgbase}"
-msgstr "AUR 软件包删除：{pkgbase}"
+msgid "MPR Package deleted: {pkgbase}"
+msgstr "MPR 软件包删除：{pkgbase}"
 
 #: scripts/notify.py
 #, python-brace-format
